# whatsapp-web-clone

webapp/backend/chat/: .test.db  main.py  models.py  pyproject.toml
webapp/frontend/: package-lock.json
webapp/frontend/public/: index.html
webapp/frontend/src/: App.vue  axios.js
webapp/frontend/src/components/: ChatComponent.vue  ChatList.vue  ChatWindow.vue  LoginComponent.vue  RegisterComponent.vue
webapp/frontend/src/router/: index.js
