[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Uadson Feitosa <uadsonfeitosa@goiania.go.gov.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
sqlmodel = "^0.0.21"
databases = "^0.9.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
